# dotphiles

./: .gitignore  .gitmodules  dotsyncrc  link_all
conky/: conky.conf  conky_fullclock.conf  conky_sysmonitor.conf  conkyrc_bar  conkyrc_dzen  conkyrc_time  conkyrc_xmobar  conkyrc_xmonad  top.conky
dunst/: dunstrc
eww/: README  eww-control  eww-example.xml  eww.scss  eww.xml  eww.yuck
flexget/: config.yml
geany/: filetype_extensions.conf  geany.conf  keybindings.conf  snippets.conf
git/: gitconfig  gitignore
hunspell/: hunspell_en_AU  hunspell_latex.dic  hunspell_latex.raw
hypr/: hyprland.conf  hyprpaper.conf
i3/: config  conkyrc  xinitrc_i3
i3status/: config
latex/: mathematicalTerms-de.txt  mathematicalTerms-en.txt  ross.sty
lxterminal/: lxterminal.conf
nano/: nanorc
rofi/: README  _config  combi-switcher.sh  launcher.sh  switcher.sh
ssh/: config
stack/: config.yaml
sublime-text-2/: .gitignore
tmux/: current_pane_hostname.tmux  tmux.conf
touchegg/: touchegg.conf  touchegg_xmonad.conf
tvnamer/: tvnamer.json
vscode/: keybindings.json  settings.json
xbindkeys/: xbindkeysrc
xinit/: Xresources  Xresources_aion  xinitrc  xprofile
xmobar/: xmobarrc  xmobarrc1  xmobarrc2
xmodmap/: Xmodmap  xmodmap_braces  (+4 more)
xmonad/: LICENSE  XmonadConfig.hs  XmonadKeys.hs  build  build.ghc_dyn  cabal.config  package.yaml  stack.yaml  xinitrc_xmonad  xmonad  xmonad-config.cabal  xmonad-x86_64-linux  xmonad.errors  xmonad.hi  xmonad.hs  xmonad.state
xmonad/src/: XmonadConfig.hs  XmonadKeys.hs  xmonad.hs
xmonad/xmonad-0.11.1/: xmonad.cabal
(+47 files in other folders)
