name:                xmonad-config
version:             0.1.0.0
synopsis:            My Xmonad config
-- description:
-- homepage:
license:             BSD3
-- license-file:     
author:              Ross Ogilvie
maintainer:          ross@rossogilvie.id.au
-- copyright:        
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable xmonad-x86_64-linux
  hs-source-dirs:      src
  main-is:             xmonad.hs
  other-modules:
    XmonadConfig
    , XmonadKeys
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  -- ghc-options: -Wall
  build-depends:       
    base
    , containers
    , X11
    , xmonad
    , xmonad-contrib
  default-language:    Haskell2010